# starscream

./: CMakeLists.txt  COPYRIGHT  Makefile  Makefile.back  ProjectHome.md  README  aclocal.m4  config.h  config.h.in  configure  configure.in  libtool  quickUpdate20120717.md  v1LessonsLearned.md
CMakeMacros/: SetupLinuxOptions.cmake
configWarnings/: MISSING_GSL_WARNING
model/: .project
model/org.jayjaybillings.math.model/: mathTransform.tc  org.jayjaybillings.math.emx  org.jayjaybillings.math.testingModel.emx
org.jayjaybillings/src/random/: CMWCRNG.java
src/: CMakeLists.txt  Makefile  Makefile.in  TestClass.h  libstarscream.la  starscream.c  starscream.h  starscreamConfig.h.in  starscream_init.c  starscream_vel.c
src/org.jayjaybillings.math/: .project
tests/org.jayjaybillings.math.tests/: .classpath  .project  build.properties
tests/org.jayjaybillings.math.tests/src/integration/: ThreeDSinc.java  UnitSphere.java
trunk/: .project  COPYRIGHT  Makefile.in  README  bugs.txt  config.status  configure.scan  libtool
trunk/CMakeMacros/: CheckOS.cmake  SetBuildOptions.cmake
trunk/configWarnings/: MISSING_FFTW3_WARNING  MISSING_PKG_CONFIG
trunk/model/: StarscreamModel.emx
trunk/model/org.jayjaybillings.math.model/: .project  mathTestsTransform.tc  org.jayjaybillings.math.testingModel.emx
trunk/src/: CMakeLists.txt  Makefile.am  TestClass.cpp  starscreamConfig.h.in  starscreamTest  starscream_init.c  starscream_io.c  starscream_pf.c  starscream_structure.c
trunk/src/org.jayjaybillings.math/src/common/: Constants.java  IFunction.java
trunk/src/org.jayjaybillings.math/src/integration/: VEGASMonteCarloIntegrator.java
trunk/src/org.jayjaybillings.math/src/random/: CMWCRNG.java  RNG.java
trunk/tests/org.jayjaybillings.math.tests/: .project
trunk/tests/org.jayjaybillings.math.tests/src/integration/: OneDQuadratic.java  VEGASMonteCarloIntegratorTester.java
trunk/tests/org.jayjaybillings.math.tests/src/random/: CMWCRNGOutputGenerator.java
wiki/: quickUpdate20120717.wiki  v1LessonsLearned.wiki
